--- a/examples/actix-basic/Cargo.toml
+++ b/examples/actix-basic/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 publish = false
 
 [dependencies]
-firebase-auth = { path = "../../firebase-auth" }
+actix-firebase-auth = { path = "../../actix-firebase-auth" }
 actix-web = { version = "4" }
