--- a/examples/actix-custom-claims/Cargo.toml
+++ b/examples/actix-custom-claims/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-firebase-auth = { path = "../../firebase-auth" }
+actix-firebase-auth = { path = "../../actix-firebase-auth" }
 actix-web = { version = "4" }
 actix-web-httpauth = { version = "0.8.0" }
 futures = "0.3"
